@@ -8,6 +8,12 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Added a new hidden user called 'system' which is now used by
+Krang::Script.  This means you can now delete the 'admin' user with
+impunity. [Sam]
+
+=item *
+
 Fixed bug where Krang::ElementClass::TopLevel::publish_check() was not
 being checked by Krang::Schedule.  Stories that are marked to not be
 published by the scheduler will now have their wishes respected.
